实现 P04 机会工作台模块
